--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 .header {
     padding-bottom: 214px;
+    background-image: url(../img/bg.jpg);
 }
 .nav-top {
     display: flex;
@@ -33,8 +34,11 @@ body {
 }
 .info-item,
 .info-link {
-    /*color: rgba(255,255,255,0.3);*/
+    color: rgba(255,255,255,0.3);
     font-size: 14px;
+}
+.info-link:hover {
+    color: #30a3f0;
 }
 .info-link {
     text-decoration: none;
@@ -69,7 +73,6 @@ body {
 }
 .nav-link:hover {
     color: #30f3f0;
-    border: 1px solid #30f3f0;
     border-radius: 5px;
 }
 .title {
@@ -85,6 +88,7 @@ body {
     max-width: 720px;
     margin: 0 auto;
     font-family: 'Raleway', sans-serif;
+    line-height: 60px;
     font-size: 45px;
     font-weight: 800;
     text-transform: uppercase;
@@ -111,6 +115,10 @@ body {
     padding: 20px 42px;
     border-radius: 5px;
 }
+.btn:hover {
+    background-color: #30a3f0;
+    color: #fff;
+}
 .page-line {
     border-bottom: 1px solid #e4e4e4;
 }
@@ -136,10 +144,25 @@ body {
 .title-h2 {
     font-size: 30px;
     font-weight: 800;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 .title-h2 span {
     font-size: 16px;
     color: #30a3f0;
+    display: block;
+    font-weight: 400;
+    text-transform: initial;
+    margin-bottom: 18px;
+}
+.line {
+    display: block;
+    width: 53px;
+    height: 16px;
+    background-image: url(../img/line.svg);
+    background-repeat: no-repeat;
+
 }
 .list-decription {
     color: #222222;
