--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,40 @@ body {
     margin-right: 32px;
 }
 .info-right .info-item {
-    margin-left: 17px;
+    margin-left: 6px;
 }
 .info-item,
 .info-link {
     color: rgba(255,255,255,0.3);
     font-size: 14px;
 }
+.info-item a {
+    text-decoration: none;
+}
 .info-link:hover {
     color: #30a3f0;
 }
 .info-link {
     text-decoration: none;
+}
+.info-link svg {
+    color: #30a3f0;
+    margin-right: 11px;
+}
+.register::before {
+    content: "/";
+    margin-right: 6px;
+}
+.nav-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+}
+.nav-btn svg{
+    color: #444444;
+}
+.logo {
+    width: 158px;
 }
 .head {
     background-color: #fff;
@@ -58,6 +80,9 @@ body {
 }
 .nav-item {
     margin-left: 8px;
+}
+.nav-item-btn {
+    margin-left: 21px;
 }
 .nav-link {
     color: #444444;
