--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
+    position: relative;
 }
 .center {
     text-align: center;
@@ -147,6 +148,11 @@ body {
 .page-line {
     border-bottom: 1px solid #e4e4e4;
 }
+.page-grey {
+    background-color:#fafafa;
+    padding-top: 100px;
+    padding-bottom: 62px;
+}
 .box {
     display: flex;
     border-left: 1px solid #e4e4e4;
@@ -154,7 +160,7 @@ body {
 }
 .box-item {
     flex-basis: 33.333%;
-    padding: 0 60px 110px;
+    padding: 93px 60px 110px;
 }
 .box-item-center {
     border-left: 1px solid #e4e4e4;
@@ -181,6 +187,9 @@ body {
     text-transform: initial;
     margin-bottom: 18px;
 }
+.decription {
+    color: #707070;
+}
 .line {
     display: block;
     width: 53px;
@@ -191,4 +200,78 @@ body {
 }
 .list-decription {
     color: #222222;
+    padding-left: 0;
+    list-style-type: none;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+.list-decription > li {
+    margin-bottom: 27px;
+    color: #222222;
+    padding-left: 37px;
+    position: relative;
+}
+.list-decription > li::before {
+    content: '';
+    display: block;
+    width: 16px;
+    height: 14px;
+    background-image: url(../img/check.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    left: 0;
+    top: calc(50% - 7px);
+}
+.page-mockup {
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
+.mockup {
+    display: block;
+    width: 625px;
+    height: 557px;
+    background-image: url(../img/mockup.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: -78px;
+    bottom: 0;
+}
+.btn-blue {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    background-color: #30a3f0;
+    border: 1px solid #30a3f0;
+    padding: 20px 39px;
+    border-radius: 5px;
+}
+.btn-blue:hover {
+    padding: 22px 41px;
+}
+.box-text {
+    max-width: 530px;
+}
+.box-icon {
+    width: 152px;
+    height: 152px;
+    font-size: 40px;
+    line-height: 3.5;
+    color: #222222;
+    background-image: url(../img/grey.png);
+    background-position: center center;
+    margin: 0 auto 26px;
+}
+
+.box-icon-pen {
+    font-size: 30px;
+    line-height: 4.8;
+}
+
+.box-item:hover .box-icon {
+    background-image: url(../img/blue.png);
+    color: white;
 }
