--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     text-transform: uppercase;
+    margin-bottom: 14px;
 }
 .title-h2 span {
     font-size: 16px;
@@ -187,8 +188,13 @@ body {
     text-transform: initial;
     margin-bottom: 18px;
 }
-.decription {
+.description {
     color: #707070;
+    line-height: 26px;
+}
+.page-grey .description {
+    max-width: 690px;
+    margin: 0 auto;
 }
 .line {
     display: block;
@@ -196,22 +202,29 @@ body {
     height: 16px;
     background-image: url(../img/line.svg);
     background-repeat: no-repeat;
-
 }
-.list-decription {
+.line-center {
+    display: block;
+    width: 91px;
+    height: 14px;
+    background-image: url(../img/line-center.svg);
+    background-repeat: no-repeat;
+    margin: 0 auto 30px;
+}
+.list-description {
     color: #222222;
     padding-left: 0;
     list-style-type: none;
     margin-top: 40px;
     margin-bottom: 60px;
 }
-.list-decription > li {
+.list-description > li {
     margin-bottom: 27px;
     color: #222222;
     padding-left: 37px;
     position: relative;
 }
-.list-decription > li::before {
+.list-description > li::before {
     content: '';
     display: block;
     width: 16px;
@@ -274,4 +287,73 @@ body {
 .box-item:hover .box-icon {
     background-image: url(../img/blue.png);
     color: white;
+}
+.photo {
+    display: flex;
+}
+.photo-item {
+    overflow: hidden;
+    flex-basis: 20%;
+    height: 350px;
+    position: relative;
+}
+.photo-item img {
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    height: 350px;
+    z-index: -1;
+}
+.photo-text {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    top: calc(50% - 30px);
+    display: none;
+}
+.photo-text h3 {
+    font-size: 22px;
+    font-weight: 700;
+    font-family: 'Raleway', sans-serif;
+    color: #fff;
+    margin-bottom: 14px;
+    margin-top: 0;
+    text-transform: uppercase;
+}
+.photo-text p {
+    color: #707070;
+    margin-bottom: 0px;
+}
+.photo-item:hover {
+    background-color: rgba(34, 34, 34, 0.8);
+}
+.photo-item:hover .photo-text {
+    display: block;
+}
+.photo-btn {
+    position: relative;
+    margin-left: calc(100% - 120px);
+    top: 100%;
+    margin-top: -60px;
+    width: 120px;
+    height: 60px;
+    text-decoration: none;
+    display: none;
+}
+.photo-btn > a {
+    padding: 22px;
+}
+.photo-btn .find {
+    background-color: #ffffff;
+    color: #222222;
+}
+.photo-btn .link {
+    background-color: #30a3f0;
+    color: #fff;
+}
+.photo-item:hover .photo-btn {
+    display: flex;
 }
