--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
     border: 1px solid #30a3f0;
     padding: 20px 42px;
     border-radius: 5px;
+    transition: background-color 0.5s linear, color 0.2s ease;
 }
 .btn:hover {
     background-color: #30a3f0;
@@ -261,9 +262,11 @@ body {
     border: 1px solid #30a3f0;
     padding: 20px 39px;
     border-radius: 5px;
+    transition: background-color 0.5s linear, color 0.2s ease;
 }
 .btn-blue:hover {
-    padding: 22px 41px;
+    background-color: #222222;
+    color: #30f3f0;
 }
 .box-text {
     max-width: 530px;
@@ -373,6 +376,7 @@ body {
     grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
     grid-gap: 70px 50px;
     margin-top: 122px;
+    margin-bottom: 128px;
 
 }
 .grid h3 {
@@ -396,4 +400,19 @@ body {
 }
 .grid-line-text {
     flex-basis: calc(100% - 126px);
+}
+.page-bg {
+    background-image: url(../img/bg2.jpg);
+    background-size: cover;
+    padding-top: 110px;
+    padding-bottom: 112px;
+}
+.page-bg .title {
+    margin-bottom: 0;
+}
+.page-bg .title h1 {
+    margin-bottom: 40px;
+}
+.page-bg .element-bottom {
+    margin-top: 53px;
 }
